Adicionando resposta de erro personalizada com i18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
 
   errors:
     not_found: "%{model} not found"
+    email_already_exists: "This email is already taken. Please use a different email."
   
   seed:
     users:
