--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,7 +47,15 @@ en:
       show?: "You do not have permission to view this user."
       update?: "You do not have permission to update this user."
       create?: "You do not have permission to create this user."
-      destroy?: "You do not have permission to delete this user." 
+      destroy?: "You do not have permission to delete this user."
+    store_policy:
+      update?: "You do not have permission to update this store."
+      destroy?: "You do not have permission to delete this store."
+    invoice_policy:
+      show?: "You do not have permission to view this invoice."
+      update?: "You do not have permission to update this invoice."
+      create?: "You do not have permission to create this invoice."
+      destroy?: "You do not have permission to delete this invoice."
 
   hello: "Hello world!"
 
