--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,4 +62,4 @@ en:
     stores:
       success: "Store '%{name}' created successfully!"
       already_exists: "Store '%{name}' already exists."
-      error: "Error creating Store: %{message}"
+      error: "Error creating Store: %{message}."
